--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <button id="powersaving-off">PSM off</button>
       </p>
     </section>
-    <script src="js/thermostat.js"></script>
     <script src="jquery-3.1.0.js"></script>
+    <script src="src/thermostat.js"></script>
+    <script src="src/interface.js"></script>
   </body>
 </html>
