--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="jquery-3.1.0.js"></script>
     <script src="src/thermostat.js"></script>
     <script src="src/interface.js"></script>
+    <link rel="stylesheet" href="style.css">
   </body>
 </html>
